--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -13,7 +13,7 @@ body {
 }
 
 #scroll-container {
-  height: auto;
+  height: 100%;
   overflow: auto;
 }
 
